--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,60 +3,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:maxHeight="@dimen/image_size"
     android:orientation="horizontal">
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="@dimen/image_size"
+        android:layout_height="@dimen/image_size"
         android:contentDescription="@string/image"
-        android:src="@mipmap/ic_launcher"
-        android:scaleType="centerCrop"/>
+        android:scaleType="centerCrop" />
 
     <RelativeLayout
         android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:paddingLeft="8dp"
-        android:paddingStart="8dp">
+        android:layout_height="@dimen/image_size"
+        android:paddingLeft="@dimen/spacing8"
+        android:paddingStart="@dimen/spacing8">
 
         <TextView
-            android:textSize="20dp"
-            android:paddingTop="2dp"
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="@string/name"
+            android:paddingTop="@dimen/spacing2"
+            android:textColor="@color/colorText"
+            android:textSize="@dimen/text_size_name"
             android:textStyle="bold"
-            android:textColor="@color/colorText"/>
+            tools:text="@string/name" />
 
         <TextView
             android:id="@+id/description"
+            style="@style/CategoryStyle"
             android:layout_below="@id/name"
-            android:text="@string/description"
-            style="@style/CategoryStyle" />
+            android:text="@string/description" />
 
         <TextView
             android:id="@+id/address"
+            style="@style/CategoryStyle"
             android:layout_below="@id/description"
             android:autoLink="map"
             android:textColorLink="@color/colorText"
-            tools:text="@string/address"
-            style="@style/CategoryStyle" />
+            tools:text="@string/address" />
 
         <TextView
             android:id="@+id/hours"
+            style="@style/CategoryStyle"
             android:layout_below="@id/address"
-            tools:text="@string/hours"
-            style="@style/CategoryStyle" />
+            tools:text="@string/hours" />
 
         <TextView
             android:id="@+id/number"
+            style="@style/CategoryStyle"
             android:layout_below="@id/hours"
             android:autoLink="phone"
             android:textColorLink="@color/colorText"
-            tools:text="@string/number"
-            style="@style/CategoryStyle" />
+            tools:text="@string/number" />
 
     </RelativeLayout>
 </LinearLayout>
