--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,2 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <dimen name="text_size_name">18sp</dimen>
+    <dimen name="text_size">15sp</dimen>
+    <dimen name="tab_text_size">12sp</dimen>
+    <dimen name="image_size">100dp</dimen>
+    <dimen name="spacing8">8dp</dimen>
+    <dimen name="spacing2">2dp</dimen>
+    <dimen name="tab_max_width">150dp</dimen>
+</resources>
